# riscv-bitfield-formats

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  build.rs  citation.cff  license.md  readme.md
.github/workflows/: create-release.yml  run-clippy.yml  run-tests.yml  rust-clippy.yml  rust.yml
lib/bits/: Cargo.toml
lib/bits/src/: lib.rs
lib/bits_macro/: Cargo.toml
lib/bits_macro/src/: lib.rs
lib/csr-macro/: Cargo.toml
lib/csr-macro/src/: lib.rs
src/: bit.rs  bitfield.rs  format.rs  main.rs  print.rs
src/csr/: base.rs  h_ext.rs  h_level.rs  m_level.rs  mod.rs  pmp.rs  s_level.rs  vmem.rs
src/inst/: base_opcodes.rs  base_types.rs  instructions.rs  mod.rs
src/vmem/: mod.rs  pa.rs  pte.rs  va.rs
