[package]
name = "rv-format"
version = "0.1.0"
edition = "2021"
license-file = "license.md"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
clap = { version = "4.1.11", features = ['derive'] }
clap-num = "1.0.2"
csr-macro = { path = "lib/csr-macro" }
